can add,save,load chops

--- a/src/resources/app.qrc
+++ b/src/resources/app.qrc
@@ -8,5 +8,6 @@
     <file>save2.png</file>
     <file>load2.png</file>
     <file>view2.png</file>
+    <file>track.png</file>
   </qresource>
 </RCC>
