change view chops to clear chops

--- a/src/resources/app.qrc
+++ b/src/resources/app.qrc
@@ -7,7 +7,7 @@
     <file>new2.png</file>
     <file>save2.png</file>
     <file>load2.png</file>
-    <file>view2.png</file>
+    <file>clear2.png</file>
     <file>track.png</file>
   </qresource>
 </RCC>
