refactor the source code

--- a/src/resources/app.qrc
+++ b/src/resources/app.qrc
@@ -8,7 +8,7 @@
     <file>save2.png</file>
     <file>load2.png</file>
     <file>clear2.png</file>
-    <file>track.png</file>
+    <file>mesure.png</file>
     <file>chinese.png</file>
   </qresource>
 </RCC>
