--- a/src/resources/app.qrc
+++ b/src/resources/app.qrc
@@ -10,5 +10,6 @@
     <file>clear2.png</file>
     <file>mesure.png</file>
     <file>chinese.png</file>
+    <file>cube.png</file>
   </qresource>
 </RCC>
